# LAN-Eye

./: .gitignore  CMakeLists.txt  README.md  common_install.sh  install_build_deps.sh  install_runtime_deps.sh  run_server.sh
.github/workflows/: cmake.yml  testreport.yml
inc/: callback_handler.hpp  callback_handler.inc  capability.hpp  common.hpp  host_information.hpp  logger.hpp  ratio_utils.hpp  scanner.hpp  server.hpp
src/: capability.cpp  host_information.cpp  logger.cpp  main.cpp  scanner.cpp  server.cpp
test/: CMakeLists.txt  test_callback_handler.cpp  test_host_information.cpp
